src/main/resources/cpp/tests/neg/N04_ref_init_rvalue.cpp
int main() {
    int& r = 5; // Fehler: RValue

    return 0;
}
